--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,5 +2,8 @@
   <%= f.label :content, 'タスク名' %>
   <%= f.text_field :content %>
   
+  <%= f.label :status, 'タスク内容' %>
+  <%= f.text_field :status %>
+  
   <%= f.submit '新規作成' %>
 <% end %>
