--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,7 +9,10 @@
     </div>
   <% end %>
   
-  <%= f.label :status, 'タスク内容' %>
+  <%= f.label :content, 'content' %>
+  <%= f.text_field :content %>
+  
+  <%= f.label :status, 'status' %>
   <%= f.text_field :status %>
   
   <%= f.submit '新規作成' %>
